--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,6 @@ services:
     #   - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
-    networks:
-      - private
   server:
     build:
       context: ./server
@@ -21,12 +19,21 @@ services:
       - db
     ports:
       - "8800:8800"
-    networks:
-      - private
-      - public
+  client:
+    build:
+      context: ./client
+  reverse-proxy:
+    image: nginx
+    depends_on:
+      - db
+      - server
+      - client
+    volumes:
+      - ./reverse_proxy/nginx.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem
+      - /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem
+    ports:
+      - "80:80"
 
 volumes:
   db_data:
-networks:
-  public:
-  private:
