--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -21,6 +21,9 @@ http {
         listen       443 ssl;
         server_name  localhost;
         root   /client;
+        
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem; 
 
         location / {
             index  index.html;
