--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
     build:
       context: ./client
     volumes:
-      - /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem
-      - /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem
+      - /etc/letsencrypt/live/fgc.willma.me/fullchain.pem:/etc/nginx/ssl/fullchain.pem
+      - /etc/letsencrypt/live/fgc.willma.me/privkey.pem:/etc/nginx/ssl/privkey.pem
   reverse-proxy:
     image: nginx
     depends_on:
@@ -33,8 +33,8 @@ services:
       - client
     volumes:
       - ./reverse_proxy/nginx.conf:/etc/nginx/nginx.conf
-      - /etc/letsencrypt/ssl/fullchain.pem:/etc/nginx/ssl/fullchain.pem
-      - /etc/letsencrypt/ssl/privkey.pem:/etc/nginx/ssl/privkey.pem
+      - /etc/letsencrypt/live/fgc.willma.me/fullchain.pem:/etc/nginx/ssl/fullchain.pem
+      - /etc/letsencrypt/live/fgc.willma.me/privkey.pem:/etc/nginx/ssl/privkey.pem
     ports:
       - "80:80"
 
