configure dev/prod docker environments

--- a/reverse_proxy/nginx.prod.conf
+++ b/reverse_proxy/nginx.prod.conf
@@ -15,13 +15,13 @@ http {
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey.pem; 
 
-        location / {
+        location /* {
             proxy_pass          https://client:443;
             proxy_set_header    X-Forwarded-For $remote_addr;
         }
 
-        location /api {
-            proxy_pass          http://server:8800/;
+        location /api/ {
+            proxy_pass          http://server:8800/api/;
             proxy_set_header    X-Forwarded-For $remote_addr;
         }
     }
