--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,6 +12,9 @@ COPY . /client/
 
 RUN npm run build
 
-FROM nginx:alpine
+FROM nginx:alpine as prod
 COPY --from=build /client/build /client
 COPY nginx.conf /etc/nginx/nginx.conf
+
+FROM build as dev
+CMD ["npm", "start"]
