--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -6,8 +6,6 @@ services:
       POSTGRES_USER: server
       POSTGRES_PASSWORD: FHaYH2q54Rn8DqPY
       POSTGRES_DB: fgc
-    # ports:
-    #   - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
   server:
@@ -17,14 +15,15 @@ services:
         - DATABASE_URL=postgresql://server:FHaYH2q54Rn8DqPY@db:5432/fgc?schema=public
     depends_on:
       - db
-    ports:
-      - "8800:8800"
+    restart: always
   client:
     build:
       context: ./client
+      target: prod
     volumes:
       - /etc/letsencrypt/live/fgc.willma.me/fullchain.pem:/etc/nginx/ssl/fullchain.pem
       - /etc/letsencrypt/live/fgc.willma.me/privkey.pem:/etc/nginx/ssl/privkey.pem
+    restart: always
   reverse-proxy:
     image: nginx
     depends_on:
@@ -32,11 +31,12 @@ services:
       - server
       - client
     volumes:
-      - ./reverse_proxy/nginx.conf:/etc/nginx/nginx.conf
+      - ./reverse_proxy/nginx.prod.conf:/etc/nginx/nginx.conf
       - /etc/letsencrypt/live/fgc.willma.me/fullchain.pem:/etc/nginx/ssl/fullchain.pem
       - /etc/letsencrypt/live/fgc.willma.me/privkey.pem:/etc/nginx/ssl/privkey.pem
     ports:
       - "443:443"
+    restart: always
 
 volumes:
   db_data:
