--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -31,7 +31,7 @@ services:
       - server
       - client
     volumes:
-      - ./reverse_proxy/nginx.prod.conf:/etc/nginx/nginx.conf
+      - ./reverse_proxy/nginx.conf:/etc/nginx/nginx.conf
       - /etc/letsencrypt/live/fgc.willma.me/fullchain.pem:/etc/nginx/ssl/fullchain.pem
       - /etc/letsencrypt/live/fgc.willma.me/privkey.pem:/etc/nginx/ssl/privkey.pem
     ports:
