--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -15,8 +15,8 @@ http {
         ssl_certificate /etc/nginx/ssl/fullchain.pem;
         ssl_certificate_key /etc/nginx/ssl/privkey.pem; 
 
-        location /* {
-            proxy_pass          https://client:443;
+        location / {
+            proxy_pass          https://client:443/;
             proxy_set_header    X-Forwarded-For $remote_addr;
         }
 
