--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "@sendgrid/mail": "^8.1.3",
     "@types/cors": "^2.8.17",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
