--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -14,6 +14,4 @@ RUN npm run build
 
 EXPOSE 8800
 
-RUN npx prisma migrate deploy
-
-CMD ["node", "dist/server.js"]
+CMD ["./deploy.production.sh"]
