--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /server
 
 COPY package.json /server/package.json
 COPY package-lock.json /server/package-lock.json
+COPY deploy.production.sh /server/deploy.production.sh
 COPY ./prisma /server/prisma
 RUN npm i --include=dev
 
