--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "sqids": "^0.3.0",
     "zod": "^3.23.5"
   }
 }
