Bug Fix: update deployment scripts

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -18,13 +18,10 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen       443 ssl;
+	listen 3000;
         server_name  localhost;
         root   /client;
         
-        ssl_certificate /etc/nginx/ssl/fullchain.pem;
-        ssl_certificate_key /etc/nginx/ssl/privkey.pem; 
-
         location / {
             index  index.html;
             try_files $uri $uri/ /index.html;
