--- a/reverse_proxy/nginx.conf
+++ b/reverse_proxy/nginx.conf
@@ -16,7 +16,7 @@ http {
         ssl_certificate_key /etc/nginx/ssl/privkey.pem; 
 
         location / {
-            proxy_pass          https://client:443/;
+            proxy_pass          http://client:3000/;
             proxy_set_header    X-Forwarded-For $remote_addr;
         }
 
