--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /server
 
 COPY package.json /server/package.json
 COPY package-lock.json /server/package-lock.json
-COPY deploy.production.sh /server/deploy.production.sh
+COPY deploy.prod.sh /server/deploy.prod.sh
 COPY ./prisma /server/prisma
 RUN npm i --include=dev
 
@@ -15,4 +15,4 @@ RUN npm run build
 
 EXPOSE 8800
 
-CMD ["./deploy.production.sh"]
+CMD ["./deploy.prod.sh"]
