--- a/server/.gitignore
+++ b/server/.gitignore
@@ -6,10 +6,10 @@
 .DS_Store
 .env
 .env.local
-.env.development.local
+.env.dev.local
 .env.test.local
-.env.production
-.env.production.local
+.env.prod
+.env.prod.local
 
 npm-debug.log*
 yarn-debug.log*
